[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "google-auth>=2.43.0",
    "google-cloud-texttospeech>=2.33.0",
    "google-generativeai>=0.8.5",
    "pydantic>=2.12.5",
    "sift-stack-py>=0.9.3",
    "uvicorn>=0.38.0",
]
